[gd_scene load_steps=15 format=3 uid="uid://6fw68cb5t2l"]

[ext_resource type="Script" path="res://Scripts/Levels/TransitionsLose.gd" id="1_bsk8w"]
[ext_resource type="Texture2D" uid="uid://buq6q7e0tt8m4" path="res://Assets/Transition/Lose/transition_lose_0000.png" id="2_pikns"]
[ext_resource type="Texture2D" uid="uid://dglsk7ijbwkoh" path="res://Assets/Transition/Lose/transition_lose_0001.png" id="3_6wyt2"]
[ext_resource type="Texture2D" uid="uid://xeloy8d88kjn" path="res://Assets/Transition/Lose/transition_lose_0002.png" id="4_qns7p"]
[ext_resource type="Texture2D" uid="uid://bd8qcp3nkp3ku" path="res://Assets/Transition/Lose/transition_lose_0003.png" id="5_3b4ep"]
[ext_resource type="Texture2D" uid="uid://cnf3a2eqq2cwg" path="res://Assets/Transition/Lose/transition_lose_0004.png" id="6_dyhwe"]
[ext_resource type="Texture2D" uid="uid://4u8e8yq1hlxl" path="res://Assets/Transition/Lose/transition_lose_0005.png" id="7_ifdvm"]
[ext_resource type="Shader" path="res://Shaders/grain.gdshader" id="8_5u68u"]
[ext_resource type="FontFile" uid="uid://c4041rmkmpuiq" path="res://Fonts/PLANK___.TTF" id="9_ox2o7"]
[ext_resource type="FontFile" uid="uid://dohjlwv7dn6k7" path="res://Fonts/Excelorate-Font.otf" id="10_21wat"]

[sub_resource type="Animation" id="Animation_8t4an"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pikns")]
}

[sub_resource type="Animation" id="Animation_iw7ih"]
resource_name = "crying"
length = 1.50003
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_pikns"), ExtResource("3_6wyt2"), ExtResource("4_qns7p"), ExtResource("5_3b4ep"), ExtResource("6_dyhwe"), ExtResource("7_ifdvm")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kijlh"]
_data = {
"RESET": SubResource("Animation_8t4an"),
"crying": SubResource("Animation_iw7ih")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c6f8m"]
shader = ExtResource("8_5u68u")
shader_parameter/grain_amount = 0.03
shader_parameter/grain_size = 1.5

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bsk8w")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pikns")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kijlh")
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_c6f8m")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 960.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="Marker1" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(160, 750)

[node name="Marker2" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(480, 750)

[node name="Marker3" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(800, 750)

[node name="Marker4" type="Marker2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(1120, 750)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0.498039, 1, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("9_ox2o7")
theme_override_font_sizes/font_size = 100
text = "Label
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0.498039, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("10_21wat")
theme_override_font_sizes/font_size = 50
text = "Score"
vertical_alignment = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
